# hookinator

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonpackage.yml
hookinator/: __init__.py  constants.py  descriptors.py  helpers.py  markers.py  mixins.py  wrappers.py
tests/: conftest.py  fixtures.py  test_bind.py  test_hook_marker.py  test_hooks.py  test_noop.py  test_unbind.py
