[tool.poetry]
name = "hookinator"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Yaroslav Bibaev <yaroslav@gmx.com>"]
readme = 'README.md'
repository = "https://github.com/ddstte/hookinator"
homepage = "https://github.com/ddstte/hookinator"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
isort = "^4.3"
flake8 = "^3.7"
flake8-isort = "^2.7"

[tool.black]
line-length = 120
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
